<resources>
    <!-- 정보 -->
    <string name="app_name">금오식단뷰어</string>
    <string name="developer_name">20161185-지명근</string>

    <!-- 디자인 -->

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">금오공과대학교 식단 뷰어</string>
    <string name="nav_header_subtitle">dldhk97@naver.com</string>
    <string name="nav_header_desc">네비게이션 헤더</string>

    <!-- 메뉴 -->
    <string name="action_settings">설정</string>
    <string name="action_help">도움말</string>

    <string name="menu_home">식단표</string>
    <string name="menu_notification">식사 알림</string>
    <string name="menu_favorite">찜목록</string>

    <string name="home_second">Home Second</string>

    <string name="recycleritem_menu_background_description">카드뷰 배경화면</string>

    <string name="textView_date_default">1997.04.28</string>
    <string name="textView_mealTime_default">알수없음</string>
    <string name="textView_menus_default">알 수 없는 메뉴</string>

    <string name="popup_imageView_icon">메뉴 이미지</string>
    <string name="popup_button_link_text">웹페이지 바로가기</string>
    <string name="popup_textView_date_default">20XX.XX.XX</string>

    <string name="favorite_popup_textView_title">찜 추가</string>
    <string name="favorite_popup_editText_hint">음식명을 입력해주세요</string>
    <string name="favorite_popup_cancel_text">취소</string>
    <string name="favorite_popup_confirm_text">추가</string>

    <string name="recycleritem_notification_time_hint">클릭해서 시간을 정해주세요</string>

    <string name="notification_popup_textView_title">시간 설정</string>
    <string name="notification_popup_cancel_text">취소</string>
    <string name="notification_popup_confirm_text">설정</string>
    <string name="recycleritem_notification_time_default">오후 9시 30분</string>

    <!-- 위젯 -->
    <string name="appwidget_text">EXAMPLE</string>
    <string name="widget_configure_title">금오공과대학교 식단표 뷰어 위젯 설정</string>
    <string name="widget_textView_spinnerTitle">식당</string>
    <string name="widget_textView_switchTitle">색상</string>
    <string name="widget_textView_switchWhite">흰색</string>
    <string name="widget_textView_switchBlack">검은색</string>

    <string name="widget_textView_seekbarTitle_text">투명도</string>
    <string name="widget_configure_confirm">추가</string>

    <string name="widget_big_textView_title">메뉴</string>

    <string name="widget_textView_menus">정보 없음</string>
    <string name="widget_textView_mealTime_text">조식</string>
    <string name="widget_textView_cafeteria_text">학생식당</string>

    <string name="widget_big_textView_cafeteria">학생식당</string>
    <string name="title_activity_settings">설정</string>

    <!-- 설정:헤더 -->
    <string name="notification_header">식사 알림</string>
    <string name="home_header">홈</string>
    <string name="widget_header">위젯</string>
    <string name="data_header">데이터</string>

    <!-- 설정:식사알림 -->
    <string name="ring_title">소리</string>
    <string name="vibrate_title">진동</string>
    <string name="wakeup_title">알림이 화면을 깨움</string>
    <string name="favorite_only_title">찜 메뉴가 포함된 식단만 알림</string>
    <string name="no_notify_holiday">주말에는 알리지 않음</string>

    <!-- 설정:홈 설정 -->
    <string name="default_cafeteria_title">기본 식당</string>

    <!-- 설정:위젯 설정 -->
    <string name="widget_automatic_change_mealtime_title">위젯 자동 식사시간 변경</string>
    <string name="widget_automatic_change_mealtime_summaryOn">작은 위젯이 시간에 맞게 조식/중식/석식으로 변경됩니다.</string>
    <string name="widget_automatic_change_mealtime_summaryOff">작은 위젯의 식사시간을 터치 했을 때만 변경됩니다.</string>

    <!-- 설정:데이터 -->
    <string name="menus_data_reset_title">식단 데이터 초기화</string>
    <string name="menus_data_reset_key">menus_data_reset</string>
    <string name="menus_data_reset_summary">저장된 식단 데이터를 초기화합니다.</string>
    <string name="all_data_reset_title">모든 데이터 초기화</string>
    <string name="all_data_reset_key">data_reset</string>
    <string name="all_data_reset_summary">모든 데이터(식단, 알림, 찜)를 초기화합니다.</string>




</resources>
