<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/notification_header">

        <SwitchPreferenceCompat
            app:key="ring"
            app:title="@string/ring_title"
            app:defaultValue="true"
            />

        <SwitchPreferenceCompat
            app:key="vibrate"
            app:title="@string/vibrate_title"
            app:defaultValue="true"/>

        <SwitchPreferenceCompat
            app:key="wakeup"
            app:title="@string/wakeup_title"
            app:defaultValue="true"/>

        <SwitchPreferenceCompat
            app:key="favorite_only"
            app:title="@string/favorite_only_title" />

        <SwitchPreferenceCompat
            app:key="no_notify_holiday"
            app:title="@string/no_notify_holiday" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/home_header">

        <ListPreference
            app:defaultValue="학생식당"
            app:entries="@array/cafeteriaType"
            app:entryValues="@array/cafeteriaType"
            app:key="default_cafeteria"
            app:title="@string/default_cafeteria_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/data_header">

        <Preference app:title="@string/menus_data_reset_title"
            app:key="@string/menus_data_reset_key"
            app:summary="@string/menus_data_reset_summary"/>

        <Preference app:title="@string/all_data_reset_title"
            app:key="@string/all_data_reset_key"
            app:summary="@string/all_data_reset_summary"/>

    </PreferenceCategory>

</PreferenceScreen>
