<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.dldhk97.kumohcafeteriaviewer.ui.home.HomeFragment"
        android:label="@string/developer_name"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.dldhk97.kumohcafeteriaviewer.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_notification"
        android:name="com.dldhk97.kumohcafeteriaviewer.ui.notification.NotificationFragment"
        android:label="@string/menu_notification"
        tools:layout="@layout/fragment_notification" />

    <fragment
        android:id="@+id/nav_favorite"
        android:name="com.dldhk97.kumohcafeteriaviewer.ui.favorite.FavoriteFragment"
        android:label="@string/menu_favorite"
        tools:layout="@layout/fragment_favorite" />
</navigation>