<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/widget_configure_title" />


    <TextView
        android:id="@+id/widget_textView_spinnerTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/widget_textView_spinnerTitle"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/widget_spinner_cafeteria"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:entries="@array/cafeteriaType" />

    <TextView
        android:id="@+id/widget_textView_switchTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/widget_textView_switchTitle"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/widget_textView_switchWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/widget_textView_switchWhite"
            android:textAlignment="viewEnd"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/widget_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:checked="true" />

        <TextView
            android:id="@+id/widget_textView_switchBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/widget_textView_switchBlack"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/widget_textView_seekbarTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/widget_textView_seekbarTitle_text"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <SeekBar
            android:id="@+id/widget_seekbar"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:max="100"
            android:progress="50" />

        <TextView
            android:id="@+id/widget_textView_indicator"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="50%"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:background="@color/popup_button_background"
        android:orientation="horizontal">

        <Button
            android:id="@+id/widget_button_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/widget_configure_confirm"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>