<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/widget_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/widget_black_background"
    android:padding="@dimen/widget_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/widget_textView_cafeteria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/widget_textView_cafeteria_text"
                android:textColor="@color/widget_black_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/widget_textView_mealTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/widget_textView_mealTime_text"
                android:textAlignment="viewEnd"
                android:textColor="@color/widget_black_text"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/widget_textView_menus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/appwidget_text"
            android:text="@string/widget_textView_menus"
            android:textAlignment="viewStart"
            android:textColor="@color/widget_black_text"
            android:textSize="14sp" />
    </LinearLayout>

</RelativeLayout>